--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>DevOps Production App</title>
+</head>
+<body style="font-family: Arial;">
+    <h1>Production App - DevOps Practice</h1>
+    <p>Status: Running</p>
+    <p>Deployed via Jenkins CI/CD Pipeline</p>
+    <p>Environment: Production</p>
+</body>
+</html>
